docs/tests/nameres/expressions/valid/Critical.src
// Valid

fn void main() {
    critical {
        break;
        continue;
    }
}