docs/tests/nameres/expressions/invalid/LockNoExpr.src
// Invalid

fn void main() {
    lock () {
    }
}